add: submodule Ring-Buffer

--- a/device/controller/firmware/Makefile
+++ b/device/controller/firmware/Makefile
@@ -61,7 +61,8 @@ Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c \
 Core/Src/system_stm32f4xx.c \
 Core/Src/sysmem.c \
-Core/Src/syscalls.c
+Core/Src/syscalls.c \
+../../common/Ring-Buffer/ringbuffer.c
 
 # ASM sources
 ASM_SOURCES =  \
