add: submodule LoRa

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "device/common/Ring-Buffer"]
 	path = device/common/Ring-Buffer
 	url = git@github.com:AndersKaloer/Ring-Buffer.git
+[submodule "device/common/LoRa"]
+	path = device/common/LoRa
+	url = git@github.com:SMotlaq/LoRa.git
