update: debug port and lora conf

--- a/device/sensor/firmware/fsk-traffic-sensor.cfg
+++ b/device/sensor/firmware/fsk-traffic-sensor.cfg
@@ -41,4 +41,4 @@ source [find target/stm32f4x.cfg]
 
 init
 halt
-program ./build/firmware.elf verify reset
+program ./build/firmware.elf verify reset exit
