--- a/device/sensor/firmware/Makefile
+++ b/device/sensor/firmware/Makefile
@@ -44,6 +44,7 @@ BUILD_DIR = build
 # C sources
 C_SOURCES =  \
 Core/Src/main.c \
+Core/Src/crc.c \
 Core/Src/gpio.c \
 Core/Src/spi.c \
 Core/Src/usart.c \
@@ -66,13 +67,12 @@ Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c \
 Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c \
+Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_crc.c \
 Core/Src/system_stm32f4xx.c \
 Core/Src/sysmem.c \
 Core/Src/syscalls.c \
 ../../common/Ring-Buffer/ringbuffer.c \
-../../common/LoRa/LoRa/LoRa.c \
-Core/Src/crc.c \
-Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_crc.c
+../../common/LoRa/LoRa/LoRa.c
 
 # ASM sources
 ASM_SOURCES =  \
@@ -145,7 +145,7 @@ C_INCLUDES =  \
 # compile gcc flags
 ASFLAGS = $(MCU) $(AS_DEFS) $(AS_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
 
-CFLAGS += $(MCU) $(C_DEFS) $(C_INCLUDES) $(OPT) -Wall -fdata-sections -ffunction-sections
+CFLAGS += $(MCU) $(C_DEFS) $(C_INCLUDES) $(OPT) -Wall -Wno-comment -fdata-sections -ffunction-sections
 
 ifeq ($(DEBUG), 1)
 CFLAGS += -g -gdwarf-2
