--- a/native/package.json
+++ b/native/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "watch": "nodemon -e * --exec electron ."
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -29,6 +30,7 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "serialport": "^12.0.0"
   }
 }
