--- a/native/package.json
+++ b/native/package.json
@@ -12,6 +12,24 @@
     "lint": "echo \"No linting configured\"",
     "watch": "nodemon -e * --exec electron ."
   },
+  "build": {
+    "appId": "io.luftaquila.fsk-traffic-control",
+    "mac": {
+      "target": "dmg",
+      "icon": "resources/icons/icon.icns"
+    },
+    "win": {
+      "target": "portable",
+      "icon": "resources/icons/icon.ico"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "resources/icons/icon.png"
+    },
+    "directories": {
+      "buildResources": "resources"
+    }
+  },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
     "@electron-forge/maker-deb": "^7.4.0",
