--- a/native/package.json
+++ b/native/package.json
@@ -28,7 +28,11 @@
     },
     "directories": {
       "buildResources": "resources"
-    }
+    },
+    "asarUnpack": [
+      "./node_modules/node-notifier/**/*",
+      "./resources/icons/**"
+    ]
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -49,6 +53,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
+    "node-notifier": "^10.0.1",
     "serialport": "^12.0.0"
   }
 }
