--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -1,9 +1,10 @@
-name: Release desktop application
+name: Build desktop application
 
 on:
   push:
     paths:
       - 'native/**'
+  workflow_call:
   workflow_dispatch:
  
 jobs:
@@ -38,7 +39,7 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: build.fsk-traffic-control-macos-arm64
-        path: native/dist/mac-arm64/fsk-traffic-control*.app
+        path: native/dist/fsk-traffic-control*.dmg
 
   build-linux:
     name: Build Linux
@@ -56,26 +57,3 @@ jobs:
       with:
         name: build.fsk-traffic-control-linux-x64
         path: native/dist/fsk-traffic-control*.AppImage
-
-  release:
-    name: release
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    needs: [build-windows, build-macos, build-linux]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-      - run: |
-          cd native
-          version=${$(npm pkg get version)//\"/}
-          cd ..
-          mv build.fsk-traffic-control-windows-x64 fsk-traffic-control-windows-x64-$version.exe
-          mv build.fsk-traffic-control-macos-arm64 fsk-traffic-control-macos-arm64-$version.app
-          mv build.fsk-traffic-control-linux-x64 fsk-traffic-control-linux-x64-$version.AppImage
-      - uses: ncipollo/release-action@v1
-        with:
-          allowUpdates: true
-          artifacts: "fsk-traffic-control-windows-x64-*.zip,fsk-traffic-control-macos-arm64-*.zip,fsk-traffic-control-linux-x64-*.zip"
-          commit: ${{ github.sha }}
-          tag: ${{ github.ref_name }}
-          # body: ${{ steps.changes.outputs.changes }}
