--- a/native/package.json
+++ b/native/package.json
@@ -30,7 +30,8 @@
       "buildResources": "resources"
     },
     "asarUnpack": [
-      "./node_modules/node-notifier/**/*",
+      "./node_modules/notyf/**/*",
+      "./node_modules/@fortawesome/fontawesome-free/**/*",
       "./resources/icons/**"
     ]
   },
@@ -52,8 +53,9 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "electron-squirrel-startup": "^1.0.1",
-    "node-notifier": "^10.0.1",
+    "notyf": "^3.10.0",
     "serialport": "^12.0.0"
   }
 }
