--- a/native/package.json
+++ b/native/package.json
@@ -5,12 +5,8 @@
   "description": "FSK Traffic Control Console",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\"",
-    "watch": "nodemon -e * --exec electron ."
+    "start": "npx electron .",
+    "build": "npx electron-builder"
   },
   "build": {
     "appId": "io.luftaquila.fsk-traffic-control",
@@ -36,15 +32,8 @@
     ]
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.4.0",
-    "@electron-forge/maker-deb": "^7.4.0",
-    "@electron-forge/maker-rpm": "^7.4.0",
-    "@electron-forge/maker-squirrel": "^7.4.0",
-    "@electron-forge/maker-zip": "^7.4.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
-    "@electron-forge/plugin-fuses": "^7.4.0",
-    "@electron/fuses": "^1.8.0",
-    "electron": "32.0.1"
+    "electron": "32.0.1",
+    "electron-builder": "^25.0.5"
   },
   "keywords": [],
   "author": {
