--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -13,10 +13,15 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: npm
+        cache-dependency-path: native/package-lock.json
     - name: make
       run: |
         cd native
-        npm install
+        npm ci
         npm run build
     - uses: actions/upload-artifact@v4
       with:
@@ -28,11 +33,16 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: npm
+        cache-dependency-path: native/package-lock.json
     - name: make
       run: |
         cd native
         brew install python-setuptools
-        npm install
+        npm ci
         npm run build
     - uses: actions/upload-artifact@v4
       with:
@@ -44,11 +54,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: npm
+        cache-dependency-path: native/package-lock.json
     - name: make
       run: |
         cd native
         pip install setuptools
-        npm install
+        npm ci
         npm run build
     - uses: actions/upload-artifact@v4
       with:
