fix: missing font files in the packaged application

--- a/native/package.json
+++ b/native/package.json
@@ -26,12 +26,15 @@
       "buildResources": "resources"
     },
     "files": [
+      "**/*",
+      "resources/fonts/**/*",
       "!entry.json"
     ],
     "asarUnpack": [
-      "./node_modules/notyf/**/*",
-      "./node_modules/@fortawesome/fontawesome-free/**/*",
-      "./resources/icons/**"
+      "node_modules/notyf/**/*",
+      "node_modules/@fortawesome/fontawesome-free/**/*",
+      "resources/icons/**/*",
+      "resources/fonts/**/*"
     ]
   },
   "devDependencies": {
