--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,8 @@ jobs:
             ## Note
             Use [STM32CubeProgrammer](https://www.st.com/en/development-tools/stm32cubeprog.html) to upload the firmware to the device.  
 
+            Before open the `fsk-traffic-control` application, download [entry.json](https://github.com/luftaquila/fsk-traffic-control/blob/main/native/entry.json) and put it in the same directory with the executable.
+
             In MacOS, run the following command before open the installed `fsk-traffic-control` for the first time. Unless, it will say `"fsk-traffic-control" is damaged and can’t be opened.` because this is not a signed application.
 
             ```sh
