--- a/native/package.json
+++ b/native/package.json
@@ -51,6 +51,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "electron-squirrel-startup": "^1.0.1",
     "notyf": "^3.10.0",
-    "serialport": "^12.0.0"
+    "serialport": "^12.0.0",
+    "simple-datatables": "^9.1.0"
   }
 }
