--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -22,11 +22,11 @@ jobs:
       run: |
         cd native
         npm ci
-        npm run build
+        npm run tauri build
     - uses: actions/upload-artifact@v4
       with:
         name: build.fsk-traffic-control-windows-x64
-        path: native/dist/fsk-traffic-control*.exe
+        path: native/src-tauri/target/release/fsk-traffic-control.exe
 
   build-macos:
     name: Build macOS
@@ -41,13 +41,12 @@ jobs:
     - name: make
       run: |
         cd native
-        brew install python-setuptools
         npm ci
-        npm run build
+        npm run tauri build
     - uses: actions/upload-artifact@v4
       with:
         name: build.fsk-traffic-control-macos-arm64
-        path: native/dist/fsk-traffic-control*.dmg
+        path: native/src-tauri/target/release/fsk-traffic-control
 
   build-linux:
     name: Build Linux
@@ -61,11 +60,12 @@ jobs:
         cache-dependency-path: native/package-lock.json
     - name: make
       run: |
+        sudo apt-get update
+        sudo apt-get install -y libudev-dev libdbus-1-dev libwebkit2gtk-4.0-dev libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
         cd native
-        pip install setuptools
         npm ci
-        npm run build
+        npm run tauri build
     - uses: actions/upload-artifact@v4
       with:
         name: build.fsk-traffic-control-linux-x64
-        path: native/dist/fsk-traffic-control*.AppImage
+        path: native/src-tauri/target/release/fsk-traffic-control
