--- a/native/package.json
+++ b/native/package.json
@@ -1,57 +1,17 @@
 {
   "name": "fsk-traffic-control",
-  "productName": "fsk-traffic-control",
-  "version": "1.0.0",
-  "description": "FSK Traffic Control Console",
-  "main": "src/index.js",
+  "private": true,
+  "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "start": "npx electron .",
-    "build": "npx electron-builder"
-  },
-  "build": {
-    "appId": "io.luftaquila.fsk-traffic-control",
-    "mac": {
-      "target": "dmg",
-      "icon": "resources/icons/icon.icns"
-    },
-    "win": {
-      "target": "portable",
-      "icon": "resources/icons/icon.ico"
-    },
-    "linux": {
-      "target": "AppImage",
-      "icon": "resources/icons/icon.png"
-    },
-    "directories": {
-      "buildResources": "resources"
-    },
-    "files": [
-      "**/*",
-      "resources/fonts/**/*",
-      "!fsk-entry.json"
-    ],
-    "asarUnpack": [
-      "node_modules/notyf/**/*",
-      "node_modules/@fortawesome/fontawesome-free/**/*",
-      "resources/icons/**/*",
-      "resources/fonts/**/*"
-    ]
+    "tauri": "tauri"
   },
   "devDependencies": {
-    "electron": "32.0.1",
-    "electron-builder": "^25.0.5"
+    "@tauri-apps/cli": "^1"
   },
-  "keywords": [],
-  "author": {
-    "name": "오병준",
-    "email": "mail@luftaquila.io"
-  },
-  "license": "GPL-3.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "electron-squirrel-startup": "^1.0.1",
     "notyf": "^3.10.0",
-    "serialport": "^12.0.0",
     "simple-datatables": "^9.1.0"
   }
 }
