--- a/native/src-tauri/Cargo.toml
+++ b/native/src-tauri/Cargo.toml
@@ -16,6 +16,9 @@ tauri-build = { version = "1", features = [] }
 tauri = { version = "1", features = ["shell-open"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+open = "5.3.0"
+chrono = "0.4.38"
+serialport = "4.5.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
